assets/stylesheets/main.css
/*
   CSS Reset
   http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* end of CSS Reset *\

/*
====================================================
Basic Styling
====================================================
*/

/* Color Scheme used https://coolors.co/9cfffa-acf39d-b0c592-a97c73-af3e4d */

html {
	background: #ADF5FF; /* Waterspout */
	font: 300 16px/22px "Scope One", serif;
}

a {
	text-decoration: none;
}



/* Unvisited Link*/
a:link {
	color: black;
}

/* Selected Link */
a:hover {
	color: blue;
}


 .container {
	 width: 80%;
	 max-width: 1200px;
	 margin: 0 auto;
 }

 .container * {
	 box-sizing: border-box;
 }

/*
====================================================
Form Styling
====================================================
*/

form {
	background: white;
	padding: 20px;
	border-radius: 15px;
}

li {
  margin-bottom: 15px;
}

textarea {
	width: 280px;
}

input:invalid {
	border: 2px solid red;
}

.input-field {
	padding: 5px;
	margin: 2px;
}

/*  styles below have been from https://webdesign.tutsplus.com/tutorials/building-responsive-forms-with-flexbox--cms-26767 */
.flex-outer-1 {
	max-width: 500px;
	margin: 0 auto;
}
.flex-outer-1 li {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
}

.flex-outer-1 > li > label,
.flex-outer-1 li p {
	flex: 1 0 120px;
	max-width: 220px;
}

.flex-outer-1 > li > label + * {
	flex: 1 0 220px;
}

input[type=checkbox] {
   margin-left: 220px;
	 margin-right: 10px;
}

input[type=radio] {
	 margin-left: 220px;
	 margin-right: 10px;
}

#description {
	margin-bottom: 20px;
}

#dropdown {
  color: grey;
}
/*
====================================================
Header Styling
====================================================
*/
header {
	display: flex;
	flex-direction: row;
	justify-content: center;
	padding: 20px;
}

#title {
	font-weight: bold;
	font-size: 2em;
}
/*
====================================================
Footer Styling
====================================================
*/

footer {
	display: flex;
	flex-direction: column;
	align-items: center;
  padding: 20px;
}

footer p {
	margin-bottom: 5px;
}

/*
====================================================
Button Styling
====================================================
*/

button {
	border-radius: 15px;
	margin: 0 auto; /* centers the button */
	background-color: #ACF39D; /* Granny Smith Apple */
	color: white;
	padding: 10px 15px;
	border: 0;
}

button:hover,
button:focus {
	color: black;
}

